fix katex overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.katex-html {
+  @apply overflow-x-auto overflow-y-hidden;
+}
